library/src/libqgraphicsitem.h

typedef struct QColor QColor;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QFont QFont;
typedef struct QGraphicsItem QGraphicsItem;
typedef struct QGraphicsSceneContextMenuEvent QGraphicsSceneContextMenuEvent;
typedef struct QGraphicsSceneDragDropEvent QGraphicsSceneDragDropEvent;
typedef struct QGraphicsSceneHoverEvent QGraphicsSceneHoverEvent;
typedef struct QGraphicsSceneMouseEvent QGraphicsSceneMouseEvent;
typedef struct QGraphicsSimpleTextItem QGraphicsSimpleTextItem;
typedef struct QGraphicsTextItem QGraphicsTextItem;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaObject QMetaObject;
typedef struct QPainter QPainter;
typedef struct QPainterPath QPainterPath;
typedef struct QPointF QPointF;
typedef struct QRectF QRectF;
typedef struct QStyleOptionGraphicsItem QStyleOptionGraphicsItem;
typedef struct QTextCursor QTextCursor;
typedef struct QTextDocument QTextDocument;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
QGraphicsTextItem* QGraphicsTextItem_new();
QGraphicsTextItem* QGraphicsTextItem_new2(libqt_string text);
QGraphicsTextItem* QGraphicsTextItem_new3(QGraphicsItem* parent);
QGraphicsTextItem* QGraphicsTextItem_new4(libqt_string text, QGraphicsItem* parent);
QMetaObject* QGraphicsTextItem_MetaObject(const QGraphicsTextItem* self);
void* QGraphicsTextItem_Metacast(QGraphicsTextItem* self, const char* param1);
int QGraphicsTextItem_Metacall(QGraphicsTextItem* self, int param1, int param2, void** param3);
libqt_string QGraphicsTextItem_Tr(const char* s);
libqt_string QGraphicsTextItem_ToHtml(const QGraphicsTextItem* self);
void QGraphicsTextItem_SetHtml(QGraphicsTextItem* self, libqt_string html);
libqt_string QGraphicsTextItem_ToPlainText(const QGraphicsTextItem* self);
void QGraphicsTextItem_SetPlainText(QGraphicsTextItem* self, libqt_string text);
QFont* QGraphicsTextItem_Font(const QGraphicsTextItem* self);
void QGraphicsTextItem_SetFont(QGraphicsTextItem* self, QFont* font);
void QGraphicsTextItem_SetDefaultTextColor(QGraphicsTextItem* self, QColor* c);
QColor* QGraphicsTextItem_DefaultTextColor(const QGraphicsTextItem* self);
QRectF* QGraphicsTextItem_BoundingRect(const QGraphicsTextItem* self);
QPainterPath* QGraphicsTextItem_Shape(const QGraphicsTextItem* self);
bool QGraphicsTextItem_Contains(const QGraphicsTextItem* self, QPointF* point);
void QGraphicsTextItem_Paint(QGraphicsTextItem* self, QPainter* painter, QStyleOptionGraphicsItem* option, QWidget* widget);
bool QGraphicsTextItem_IsObscuredBy(const QGraphicsTextItem* self, QGraphicsItem* item);
QPainterPath* QGraphicsTextItem_OpaqueArea(const QGraphicsTextItem* self);
int QGraphicsTextItem_Type(const QGraphicsTextItem* self);
void QGraphicsTextItem_SetTextWidth(QGraphicsTextItem* self, double width);
double QGraphicsTextItem_TextWidth(const QGraphicsTextItem* self);
void QGraphicsTextItem_AdjustSize(QGraphicsTextItem* self);
void QGraphicsTextItem_SetDocument(QGraphicsTextItem* self, QTextDocument* document);
QTextDocument* QGraphicsTextItem_Document(const QGraphicsTextItem* self);
void QGraphicsTextItem_SetTextInteractionFlags(QGraphicsTextItem* self, int flags);
int QGraphicsTextItem_TextInteractionFlags(const QGraphicsTextItem* self);
void QGraphicsTextItem_SetTabChangesFocus(QGraphicsTextItem* self, bool b);
bool QGraphicsTextItem_TabChangesFocus(const QGraphicsTextItem* self);
void QGraphicsTextItem_SetOpenExternalLinks(QGraphicsTextItem* self, bool open);
bool QGraphicsTextItem_OpenExternalLinks(const QGraphicsTextItem* self);
void QGraphicsTextItem_SetTextCursor(QGraphicsTextItem* self, QTextCursor* cursor);
QTextCursor* QGraphicsTextItem_TextCursor(const QGraphicsTextItem* self);
void QGraphicsTextItem_LinkActivated(QGraphicsTextItem* self, libqt_string param1);
void QGraphicsTextItem_LinkHovered(QGraphicsTextItem* self, libqt_string param1);
bool QGraphicsTextItem_SceneEvent(QGraphicsTextItem* self, QEvent* event);
void QGraphicsTextItem_MousePressEvent(QGraphicsTextItem* self, QGraphicsSceneMouseEvent* event);
void QGraphicsTextItem_MouseMoveEvent(QGraphicsTextItem* self, QGraphicsSceneMouseEvent* event);
void QGraphicsTextItem_MouseReleaseEvent(QGraphicsTextItem* self, QGraphicsSceneMouseEvent* event);
void QGraphicsTextItem_MouseDoubleClickEvent(QGraphicsTextItem* self, QGraphicsSceneMouseEvent* event);
void QGraphicsTextItem_ContextMenuEvent(QGraphicsTextItem* self, QGraphicsSceneContextMenuEvent* event);
void QGraphicsTextItem_KeyPressEvent(QGraphicsTextItem* self, QKeyEvent* event);
void QGraphicsTextItem_KeyReleaseEvent(QGraphicsTextItem* self, QKeyEvent* event);
void QGraphicsTextItem_FocusInEvent(QGraphicsTextItem* self, QFocusEvent* event);
void QGraphicsTextItem_FocusOutEvent(QGraphicsTextItem* self, QFocusEvent* event);
void QGraphicsTextItem_DragEnterEvent(QGraphicsTextItem* self, QGraphicsSceneDragDropEvent* event);
void QGraphicsTextItem_DragLeaveEvent(QGraphicsTextItem* self, QGraphicsSceneDragDropEvent* event);
void QGraphicsTextItem_DragMoveEvent(QGraphicsTextItem* self, QGraphicsSceneDragDropEvent* event);
void QGraphicsTextItem_DropEvent(QGraphicsTextItem* self, QGraphicsSceneDragDropEvent* event);
void QGraphicsTextItem_InputMethodEvent(QGraphicsTextItem* self, QInputMethodEvent* event);
void QGraphicsTextItem_HoverEnterEvent(QGraphicsTextItem* self, QGraphicsSceneHoverEvent* event);
void QGraphicsTextItem_HoverMoveEvent(QGraphicsTextItem* self, QGraphicsSceneHoverEvent* event);
void QGraphicsTextItem_HoverLeaveEvent(QGraphicsTextItem* self, QGraphicsSceneHoverEvent* event);
QVariant* QGraphicsTextItem_InputMethodQuery(const QGraphicsTextItem* self, int query);
bool QGraphicsTextItem_SupportsExtension(const QGraphicsTextItem* self, int extension);
void QGraphicsTextItem_SetExtension(QGraphicsTextItem* self, int extension, QVariant* variant);
QVariant* QGraphicsTextItem_Extension(const QGraphicsTextItem* self, QVariant* variant);
libqt_string QGraphicsTextItem_Tr2(const char* s, const char* c);
libqt_string QGraphicsTextItem_Tr3(const char* s, const char* c, int n);
QGraphicsSimpleTextItem* QGraphicsSimpleTextItem_new();
QGraphicsSimpleTextItem* QGraphicsSimpleTextItem_new2(libqt_string text);
QGraphicsSimpleTextItem* QGraphicsSimpleTextItem_new3(QGraphicsItem* parent);
QGraphicsSimpleTextItem* QGraphicsSimpleTextItem_new4(libqt_string text, QGraphicsItem* parent);
void QGraphicsSimpleTextItem_SetText(QGraphicsSimpleTextItem* self, libqt_string text);
libqt_string QGraphicsSimpleTextItem_Text(const QGraphicsSimpleTextItem* self);
void QGraphicsSimpleTextItem_SetFont(QGraphicsSimpleTextItem* self, QFont* font);
QFont* QGraphicsSimpleTextItem_Font(const QGraphicsSimpleTextItem* self);
QRectF* QGraphicsSimpleTextItem_BoundingRect(const QGraphicsSimpleTextItem* self);
QPainterPath* QGraphicsSimpleTextItem_Shape(const QGraphicsSimpleTextItem* self);
bool QGraphicsSimpleTextItem_Contains(const QGraphicsSimpleTextItem* self, QPointF* point);
void QGraphicsSimpleTextItem_Paint(QGraphicsSimpleTextItem* self, QPainter* painter, QStyleOptionGraphicsItem* option, QWidget* widget);
bool QGraphicsSimpleTextItem_IsObscuredBy(const QGraphicsSimpleTextItem* self, QGraphicsItem* item);
QPainterPath* QGraphicsSimpleTextItem_OpaqueArea(const QGraphicsSimpleTextItem* self);
int QGraphicsSimpleTextItem_Type(const QGraphicsSimpleTextItem* self);
bool QGraphicsSimpleTextItem_SupportsExtension(const QGraphicsSimpleTextItem* self, int extension);
void QGraphicsSimpleTextItem_SetExtension(QGraphicsSimpleTextItem* self, int extension, QVariant* variant);
QVariant* QGraphicsSimpleTextItem_Extension(const QGraphicsSimpleTextItem* self, QVariant* variant);