src/libqgraphicsitem.bf

public struct QGraphicsTextItem
{
	[LinkName("QGraphicsTextItem_new")]
	public static extern void* QGraphicsTextItem_new();
	[LinkName("QGraphicsTextItem_new2")]
	public static extern void* QGraphicsTextItem_new2(char8[] text);
	[LinkName("QGraphicsTextItem_new3")]
	public static extern void* QGraphicsTextItem_new3(QGraphicsItem parent);
	[LinkName("QGraphicsTextItem_new4")]
	public static extern void* QGraphicsTextItem_new4(char8[] text, QGraphicsItem parent);
	[LinkName("QGraphicsTextItem_MetaObject")]
	public static extern QMetaObject QGraphicsTextItem_MetaObject(void* c_this);
	[LinkName("QGraphicsTextItem_Metacast")]
	public static extern void QGraphicsTextItem_Metacast(void* c_this, char8[] param1);
	[LinkName("QGraphicsTextItem_Metacall")]
	public static extern int32 QGraphicsTextItem_Metacall(void* c_this, int64 param1, int32 param2, void param3);
	[LinkName("QGraphicsTextItem_Tr")]
	public static extern char8[] QGraphicsTextItem_Tr(char8[] s);
	[LinkName("QGraphicsTextItem_ToHtml")]
	public static extern char8[] QGraphicsTextItem_ToHtml(void* c_this);
	[LinkName("QGraphicsTextItem_SetHtml")]
	public static extern void QGraphicsTextItem_SetHtml(void* c_this, char8[] html);
	[LinkName("QGraphicsTextItem_ToPlainText")]
	public static extern char8[] QGraphicsTextItem_ToPlainText(void* c_this);
	[LinkName("QGraphicsTextItem_SetPlainText")]
	public static extern void QGraphicsTextItem_SetPlainText(void* c_this, char8[] text);
	[LinkName("QGraphicsTextItem_Font")]
	public static extern QFont QGraphicsTextItem_Font(void* c_this);
	[LinkName("QGraphicsTextItem_SetFont")]
	public static extern void QGraphicsTextItem_SetFont(void* c_this, QFont font);
	[LinkName("QGraphicsTextItem_SetDefaultTextColor")]
	public static extern void QGraphicsTextItem_SetDefaultTextColor(void* c_this, QColor c);
	[LinkName("QGraphicsTextItem_DefaultTextColor")]
	public static extern QColor QGraphicsTextItem_DefaultTextColor(void* c_this);
	[LinkName("QGraphicsTextItem_BoundingRect")]
	public static extern QRectF QGraphicsTextItem_BoundingRect(void* c_this);
	[LinkName("QGraphicsTextItem_Shape")]
	public static extern QPainterPath QGraphicsTextItem_Shape(void* c_this);
	[LinkName("QGraphicsTextItem_Contains")]
	public static extern bool QGraphicsTextItem_Contains(void* c_this, QPointF point);
	[LinkName("QGraphicsTextItem_Paint")]
	public static extern void QGraphicsTextItem_Paint(void* c_this, QPainter painter, QStyleOptionGraphicsItem option, QWidget widget);
	[LinkName("QGraphicsTextItem_IsObscuredBy")]
	public static extern bool QGraphicsTextItem_IsObscuredBy(void* c_this, QGraphicsItem item);
	[LinkName("QGraphicsTextItem_OpaqueArea")]
	public static extern QPainterPath QGraphicsTextItem_OpaqueArea(void* c_this);
	[LinkName("QGraphicsTextItem_Type")]
	public static extern int32 QGraphicsTextItem_Type(void* c_this);
	[LinkName("QGraphicsTextItem_SetTextWidth")]
	public static extern void QGraphicsTextItem_SetTextWidth(void* c_this, double width);
	[LinkName("QGraphicsTextItem_TextWidth")]
	public static extern double QGraphicsTextItem_TextWidth(void* c_this);
	[LinkName("QGraphicsTextItem_AdjustSize")]
	public static extern void QGraphicsTextItem_AdjustSize(void* c_this);
	[LinkName("QGraphicsTextItem_SetDocument")]
	public static extern void QGraphicsTextItem_SetDocument(void* c_this, QTextDocument document);
	[LinkName("QGraphicsTextItem_Document")]
	public static extern QTextDocument QGraphicsTextItem_Document(void* c_this);
	[LinkName("QGraphicsTextItem_SetTextInteractionFlags")]
	public static extern void QGraphicsTextItem_SetTextInteractionFlags(void* c_this, int64 flags);
	[LinkName("QGraphicsTextItem_TextInteractionFlags")]
	public static extern int64 QGraphicsTextItem_TextInteractionFlags(void* c_this);
	[LinkName("QGraphicsTextItem_SetTabChangesFocus")]
	public static extern void QGraphicsTextItem_SetTabChangesFocus(void* c_this, bool b);
	[LinkName("QGraphicsTextItem_TabChangesFocus")]
	public static extern bool QGraphicsTextItem_TabChangesFocus(void* c_this);
	[LinkName("QGraphicsTextItem_SetOpenExternalLinks")]
	public static extern void QGraphicsTextItem_SetOpenExternalLinks(void* c_this, bool open);
	[LinkName("QGraphicsTextItem_OpenExternalLinks")]
	public static extern bool QGraphicsTextItem_OpenExternalLinks(void* c_this);
	[LinkName("QGraphicsTextItem_SetTextCursor")]
	public static extern void QGraphicsTextItem_SetTextCursor(void* c_this, QTextCursor cursor);
	[LinkName("QGraphicsTextItem_TextCursor")]
	public static extern QTextCursor QGraphicsTextItem_TextCursor(void* c_this);
	[LinkName("QGraphicsTextItem_LinkActivated")]
	public static extern void QGraphicsTextItem_LinkActivated(void* c_this, char8[] param1);
	[LinkName("QGraphicsTextItem_LinkHovered")]
	public static extern void QGraphicsTextItem_LinkHovered(void* c_this, char8[] param1);
	[LinkName("QGraphicsTextItem_SceneEvent")]
	public static extern bool QGraphicsTextItem_SceneEvent(void* c_this, QEvent event);
	[LinkName("QGraphicsTextItem_MousePressEvent")]
	public static extern void QGraphicsTextItem_MousePressEvent(void* c_this, QGraphicsSceneMouseEvent event);
	[LinkName("QGraphicsTextItem_MouseMoveEvent")]
	public static extern void QGraphicsTextItem_MouseMoveEvent(void* c_this, QGraphicsSceneMouseEvent event);
	[LinkName("QGraphicsTextItem_MouseReleaseEvent")]
	public static extern void QGraphicsTextItem_MouseReleaseEvent(void* c_this, QGraphicsSceneMouseEvent event);
	[LinkName("QGraphicsTextItem_MouseDoubleClickEvent")]
	public static extern void QGraphicsTextItem_MouseDoubleClickEvent(void* c_this, QGraphicsSceneMouseEvent event);
	[LinkName("QGraphicsTextItem_ContextMenuEvent")]
	public static extern void QGraphicsTextItem_ContextMenuEvent(void* c_this, QGraphicsSceneContextMenuEvent event);
	[LinkName("QGraphicsTextItem_KeyPressEvent")]
	public static extern void QGraphicsTextItem_KeyPressEvent(void* c_this, QKeyEvent event);
	[LinkName("QGraphicsTextItem_KeyReleaseEvent")]
	public static extern void QGraphicsTextItem_KeyReleaseEvent(void* c_this, QKeyEvent event);
	[LinkName("QGraphicsTextItem_FocusInEvent")]
	public static extern void QGraphicsTextItem_FocusInEvent(void* c_this, QFocusEvent event);
	[LinkName("QGraphicsTextItem_FocusOutEvent")]
	public static extern void QGraphicsTextItem_FocusOutEvent(void* c_this, QFocusEvent event);
	[LinkName("QGraphicsTextItem_DragEnterEvent")]
	public static extern void QGraphicsTextItem_DragEnterEvent(void* c_this, QGraphicsSceneDragDropEvent event);
	[LinkName("QGraphicsTextItem_DragLeaveEvent")]
	public static extern void QGraphicsTextItem_DragLeaveEvent(void* c_this, QGraphicsSceneDragDropEvent event);
	[LinkName("QGraphicsTextItem_DragMoveEvent")]
	public static extern void QGraphicsTextItem_DragMoveEvent(void* c_this, QGraphicsSceneDragDropEvent event);
	[LinkName("QGraphicsTextItem_DropEvent")]
	public static extern void QGraphicsTextItem_DropEvent(void* c_this, QGraphicsSceneDragDropEvent event);
	[LinkName("QGraphicsTextItem_InputMethodEvent")]
	public static extern void QGraphicsTextItem_InputMethodEvent(void* c_this, QInputMethodEvent event);
	[LinkName("QGraphicsTextItem_HoverEnterEvent")]
	public static extern void QGraphicsTextItem_HoverEnterEvent(void* c_this, QGraphicsSceneHoverEvent event);
	[LinkName("QGraphicsTextItem_HoverMoveEvent")]
	public static extern void QGraphicsTextItem_HoverMoveEvent(void* c_this, QGraphicsSceneHoverEvent event);
	[LinkName("QGraphicsTextItem_HoverLeaveEvent")]
	public static extern void QGraphicsTextItem_HoverLeaveEvent(void* c_this, QGraphicsSceneHoverEvent event);
	[LinkName("QGraphicsTextItem_InputMethodQuery")]
	public static extern QVariant QGraphicsTextItem_InputMethodQuery(void* c_this, int64 query);
	[LinkName("QGraphicsTextItem_SupportsExtension")]
	public static extern bool QGraphicsTextItem_SupportsExtension(void* c_this, int64 _extension);
	[LinkName("QGraphicsTextItem_SetExtension")]
	public static extern void QGraphicsTextItem_SetExtension(void* c_this, int64 _extension, QVariant variant);
	[LinkName("QGraphicsTextItem_Extension")]
	public static extern QVariant QGraphicsTextItem_Extension(void* c_this, QVariant variant);
	[LinkName("QGraphicsTextItem_Tr2")]
	public static extern char8[] QGraphicsTextItem_Tr2(char8[] s, char8[] c);
	[LinkName("QGraphicsTextItem_Tr3")]
	public static extern char8[] QGraphicsTextItem_Tr3(char8[] s, char8[] c, int32 n);
}
public struct QGraphicsSimpleTextItem
{
	[LinkName("QGraphicsSimpleTextItem_new")]
	public static extern void* QGraphicsSimpleTextItem_new();
	[LinkName("QGraphicsSimpleTextItem_new2")]
	public static extern void* QGraphicsSimpleTextItem_new2(char8[] text);
	[LinkName("QGraphicsSimpleTextItem_new3")]
	public static extern void* QGraphicsSimpleTextItem_new3(QGraphicsItem parent);
	[LinkName("QGraphicsSimpleTextItem_new4")]
	public static extern void* QGraphicsSimpleTextItem_new4(char8[] text, QGraphicsItem parent);
	[LinkName("QGraphicsSimpleTextItem_SetText")]
	public static extern void QGraphicsSimpleTextItem_SetText(void* c_this, char8[] text);
	[LinkName("QGraphicsSimpleTextItem_Text")]
	public static extern char8[] QGraphicsSimpleTextItem_Text(void* c_this);
	[LinkName("QGraphicsSimpleTextItem_SetFont")]
	public static extern void QGraphicsSimpleTextItem_SetFont(void* c_this, QFont font);
	[LinkName("QGraphicsSimpleTextItem_Font")]
	public static extern QFont QGraphicsSimpleTextItem_Font(void* c_this);
	[LinkName("QGraphicsSimpleTextItem_BoundingRect")]
	public static extern QRectF QGraphicsSimpleTextItem_BoundingRect(void* c_this);
	[LinkName("QGraphicsSimpleTextItem_Shape")]
	public static extern QPainterPath QGraphicsSimpleTextItem_Shape(void* c_this);
	[LinkName("QGraphicsSimpleTextItem_Contains")]
	public static extern bool QGraphicsSimpleTextItem_Contains(void* c_this, QPointF point);
	[LinkName("QGraphicsSimpleTextItem_Paint")]
	public static extern void QGraphicsSimpleTextItem_Paint(void* c_this, QPainter painter, QStyleOptionGraphicsItem option, QWidget widget);
	[LinkName("QGraphicsSimpleTextItem_IsObscuredBy")]
	public static extern bool QGraphicsSimpleTextItem_IsObscuredBy(void* c_this, QGraphicsItem item);
	[LinkName("QGraphicsSimpleTextItem_OpaqueArea")]
	public static extern QPainterPath QGraphicsSimpleTextItem_OpaqueArea(void* c_this);
	[LinkName("QGraphicsSimpleTextItem_Type")]
	public static extern int32 QGraphicsSimpleTextItem_Type(void* c_this);
	[LinkName("QGraphicsSimpleTextItem_SupportsExtension")]
	public static extern bool QGraphicsSimpleTextItem_SupportsExtension(void* c_this, int64 _extension);
	[LinkName("QGraphicsSimpleTextItem_SetExtension")]
	public static extern void QGraphicsSimpleTextItem_SetExtension(void* c_this, int64 _extension, QVariant variant);
	[LinkName("QGraphicsSimpleTextItem_Extension")]
	public static extern QVariant QGraphicsSimpleTextItem_Extension(void* c_this, QVariant variant);
}
